--- a/public/index.html
+++ b/public/index.html
@@ -128,42 +128,15 @@
     </div>
 </div>
 <script src="lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-<script src="js/lay-config.js?v=2.0.0" charset="utf-8"></script>
+<!-- <script src="js/lay-config.js?v=2.0.0" charset="utf-8"></script> -->
+<!-- JS也是单入口的 -->
+<script src="js/admin.js?v=1.0.0" charset="utf-8"></script>
 <script>
-    layui.use(['jquery', 'layer', 'miniAdmin','miniTongji'], function () {
-        var $ = layui.jquery,
-            layer = layui.layer,
-            miniAdmin = layui.miniAdmin,
-            miniTongji = layui.miniTongji;
+    layui.use(['adminIndex'], function () {
+        var adminIndex = layui.adminIndex;
 
-        var options = {
-            iniUrl: "MenuController/getSystemInit",    // 初始化接口
-            clearUrl: "MenuController/clear", // 缓存清理接口
-            urlHashLocation: true,      // 是否打开hash定位
-            bgColorDefault: false,      // 主题默认配置
-            multiModule: true,          // 是否开启多模块
-            menuChildOpen: false,       // 是否默认展开菜单
-            loadingTime: 0,             // 初始化加载时间
-            pageAnim: true,             // iframe窗口动画
-            maxTabNum: 20,              // 最大的tab打开数量
-        };
-        miniAdmin.render(options);
+        adminIndex.init();
 
-        // 百度统计代码，只统计指定域名
-        miniTongji.render({
-            specific: true,
-            domains: [
-                '99php.cn',
-                'layuimini.99php.cn',
-                'layuimini-onepage.99php.cn',
-            ],
-        });
-
-        $('.login-out').on("click", function () {
-            layer.msg('退出登录成功', function () {
-                window.location = 'page/login-1.html';
-            });
-        });
     });
 </script>
 </body>
